DITT-100: Fix WorkLogCalendar overflow

--- a/src/components/WorkLogCalendar/WorkLogCalendar.scss
+++ b/src/components/WorkLogCalendar/WorkLogCalendar.scss
@@ -63,6 +63,7 @@ $_table-cell-padding-y: 0.25rem;
 }
 
 .table {
+  position: relative;
   width: 100%;
   max-width: 100%;
   border-collapse: collapse;
